tests/fails/veclit.t
import "compiler/liszt"

mesh = LoadMesh("examples/mesh.lmesh")
local vk = liszt_kernel(v)
    var v = { }
end
mesh.vertices:map(vk)
